# Operating-Systems-FS19

./: .gitignore
Serie00/: CMakeLists.txt
Serie00/src/: fib.c  multiply.c  substr.c
Serie01/: Answers.md
Serie01/src/: error.c  linked_list.c  net.c  substr.c
Serie02/: CMakeLists.txt
Serie02/src/: statistics  statistics.c  zombies.c
Serie03/: CMakeLists.txt
Serie03/src/: resources  resources.c
